k8s/3-deployment-with-probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timescaledb
  labels:
    app: timescaledb
spec: 
  selector:
    matchLabels:
      app: timescaledb
  template:
    metadata:
      labels:
        app: timescaledb
    spec:
      containers:
        - name: postgres
          image: "timescale/pg_prometheus:latest-pg11"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
              name: timescaledb
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: data
              subPath: timescaledb
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -h
                - localhost
                - -U
                - postgres
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -h
                - localhost
                - -U
                - postgres
            initialDelaySeconds: 5
            timeoutSeconds: 1
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: timescaledb-data
