k8s/3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timescaledb
  labels:
    app: timescaledb
spec: 
  selector:
    matchLabels:
      app: timescaledb
  template:
    metadata:
      labels:
        app: timescaledb
    spec:
      containers:
        - name: postgres
          image: "timescale/pg_prometheus:latest-pg11"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
              name: timescaledb
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: data
              subPath: timescaledb
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: timescaledb-data
