k8s/4-service-loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: timescaledb
  labels:
    app: timescaledb
spec:
  type: LoadBalancer
  ports:
   - port: 5432
     protocol: TCP
  selector:
   app: timescaledb
