k8s/5-pgadmin4-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pgadmin4
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - pgadmin4.pixime.fr
      secretName: pgadmin4-tls
  rules:
    - host: pgadmin4.pixime.fr
      http:
        paths:
          - backend:
              serviceName: pgadmin-pgadmin4
              servicePort: 80
